--- a/params/patrol_params.yaml
+++ b/params/patrol_params.yaml
@@ -1,7 +1,9 @@
 patrol:
   max_speed           : 1.5 # meter/sec
-  wheel_base          : 2 # dist
-  look_ahead_distance : 3
-  speed_gain          : 0.5
+  wheel_base          : 2   # distance meter
+  look_ahead_distance : 3   # distance meter
+  speed_gain          : 0.1 #
+  speed_curvature_gain : 0.1
+  path_topic           : "odom_path"
 map:
  to_center: true
