--- a/params/patrol_params.yaml
+++ b/params/patrol_params.yaml
@@ -1,10 +1,22 @@
-patrol:
-  max_speed           : 1.5 # meter/sec
+vehicle:
   wheel_base          : 2   # distance meter
-  look_ahead_distance : 3   # distance meter
-  speed_gain          : 0.1 #
-  speed_curvature_gain : 0.1
+  dist_front_rear_wheels : 1 # distance meter
+
+patrol:
   path_topic           : "odom_path"
+#  odom_topic           : "/mavros/local_position/odom"
   wait_time_at_ends   : 5  # secs
-map:
- to_center: true
+  google_map_center_always : true
+  min_speed: 0.3
+  max_speed: 3
+
+pure_pursuit:
+  min_look_ahead : 3 # meters
+  max_look_ahead : 6 # meters
+  speed_to_lookahead_ratio : 2
+  speed_curvature_ratio : 2
+  
+
+stanley:
+  control_gain : 0.1 # meters
+  softening_gain : 1 # meters
