--- a/params/patrol_params.yaml
+++ b/params/patrol_params.yaml
@@ -1,22 +1,24 @@
 vehicle:
   wheel_base          : 2   # distance meter
-  dist_front_rear_wheels : 1 # distance meter
+  dist_front_rear_wheels : 1.5 # distance meter
 
 patrol:
   path_topic           : "odom_path"
-#  odom_topic           : "/mavros/local_position/odom"
   wait_time_at_ends   : 5  # secs
   google_map_center_always : true
-  min_speed: 0.3
+  min_speed: 0.3 # mean of these are considered as actual speed
   max_speed: 3
+  control_topic: "/cmd_drive/pure_pursuit"
 
 pure_pursuit:
   min_look_ahead : 3 # meters
   max_look_ahead : 6 # meters
-  speed_to_lookahead_ratio : 2
+  speed_to_lookahead_ratio : 1
   speed_curvature_ratio : 2
-  
 
 stanley:
   control_gain : 0.1 # meters
   softening_gain : 1 # meters
+
+carla_sim:
+  speed : 0.3
