--- a/collision_check/params/costmap_params.yaml
+++ b/collision_check/params/costmap_params.yaml
@@ -1,5 +1,5 @@
 global_frame: map
-robot_base_frame: ego_vehicle
+robot_base_frame: base_link
 update_frequency: 5
 publish_frequency: 15
 
@@ -46,8 +46,8 @@ lethal_cost_threshold: 100
 obstacle_layer:
     observation_sources: point_cloud_sensor
     # laser: {sensor_frame: ego_vehicle/lidar,data_type: PointCloud2, clearing: true, marking: true, topic: /carla/ego_vehicle/lidar, inf_is_valid: false}
-    point_cloud_sensor: {sensor_frame: ego_vehicle/lidar, data_type: PointCloud2, topic: /carla/ego_vehicle/lidar, marking: true, clearing: true,inf_is_valid: false,min_obstacle_height: 0.3, max_obstacle_height: 3.0,
-    raytrace_range: 50 ,obstacle_range: 50}
+    point_cloud_sensor: {sensor_frame: /rslidar, data_type: PointCloud2, topic: /rslidar_points, marking: true, clearing: true,inf_is_valid: false,min_obstacle_height: 0.3, max_obstacle_height: 3.0,
+     raytrace_range: 50 ,obstacle_range: 50}
         #,min_z: 0.1 ,max_z: 8.0}
         # max_obstacle_height: 3
         # obstacle_range: 30
