feat: messeges of trejectory for Obstacle stop planner - #33

--- a/autopilot_msgs/CMakeLists.txt
+++ b/autopilot_msgs/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(catkin REQUIRED
     rospy
     message_generation
     std_msgs
+    geometry_msgs
     )
 
 ## Generate messages in the 'msg' folder
@@ -13,8 +14,11 @@ add_message_files(
   FILES
   FloatKeyValue.msg
   ControllerDiagnose.msg
+  TrajectoryPoint.msg
+  Trajectory.msg
  )
  generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
 )
