--- a/vehicle_safety/params/vehicle_safety_params.yaml
+++ b/vehicle_safety/params/vehicle_safety_params.yaml
@@ -2,3 +2,12 @@ vehicle_safety:
   CTE_THR : 1 # cte threshold in meters
   HEAD_THR : 10 # Heading Threshold in degrees(+/-)
   GPS_FIX_THR : 10.0 #GPS FIX Threshold time in seconds
+  geo_fence_coordinates: [
+    [13.584927310648094,79.96143747121096],
+    [13.584685821553478,79.96227599680424],
+    [13.584415001507033,79.96305719017982],
+    [13.585372158336437,79.96300991624594],
+    [13.585495672674751,79.96209863573313],
+    [13.585544231064546,79.96139656752348],
+    [13.584927310648094,79.96143747121096]
+] #mango farm fence coordinates
