--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 dotmap==1.3.30
-rospy-message-converter
-geojson
+numpy==1.22.3
+rospy-message-converter==0.5.2
+geojson==2.5.0
+scikit-learn==1.0.2
