--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -7,11 +7,11 @@ path_publisher:
 
 patrol:
   path_topic           : "odom_path"
-  pure_pursuit/cmd_drive            : "pure_pursuit/cmd_drive" # 
+  cmd_topic            : "/vehicle/cmd_drive_safe" # 
   pilot_cmd_in         : "/vehicle/cmd_drive_safe"
   wait_time_on_mission_complete  : 20  # secs
   google_map_center_always : true
-  max_forward_speed : 2.5
+  max_forward_speed : 1.8
   min_forward_speed : 1.5
   max_backward_speed : -1.2
   min_backward_speed : -0.3
