--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -3,6 +3,8 @@ path_publisher:
   distance_to_slowdown_on_ends : 3
   path_resolution : 0.1 # 10 cms
   steering_limits_to_slow_down : 10 # if steering angle is more than this value, its associated speed reduces.
+  speed_reduce_factor : 0.8 # by this factor speed will decrease after steering_limits_to_slow_down
+
 
 patrol:
   path_topic           : "odom_path"
@@ -11,7 +13,7 @@ patrol:
   wait_time_on_mission_complete  : 2  # secs
   google_map_center_always : true
   max_forward_speed : 2.5
-  min_forward_speed : 1.5
+  min_forward_speed : 1.0
   max_backward_speed : -1.2
   min_backward_speed : -0.3
 
