--- a/obstacle_stop_planner/params/obstacle_stop_planner.yaml
+++ b/obstacle_stop_planner/params/obstacle_stop_planner.yaml
@@ -1,8 +1,9 @@
 obstacle_stop_planner:
+  stop_line_buffer : 3 # distance to be maintained from obstacle from front tip of vehicle (m).
   stop_margin : 7 # meters
   slow_down_margin : 10 # meters
 
-  radial_off_set_to_vehicle_width : 0.3 # offset search radius to add vehicle width.
+  radial_off_set_to_vehicle_width : 1 # offset search radius to add vehicle width.
   trajectory_resolution : 0.5 # the minimum distance between the points in trajectory
 
   lookup_collision_distance : 20 # the distance to look for obstacle from vehicle location on the path.
@@ -11,8 +12,9 @@ obstacle_stop_planner:
   scan_in  : "laser_scan"
   traj_out : "local_gps_trajectory"
 
-  max_slow_down_velocity : 1.5 # m/s
-  min_slow_down_velocity : 0.8 # m/s
+  max_forward_speed: 2.5
+  min_forward_speed: 1.0
+  max_acceleration : 0.8 # m/s^2
 
   vis_collision_points : true
   vis_trajectory_rviz  : true
