--- a/vehicle_common/params/porter_config.yaml
+++ b/vehicle_common/params/porter_config.yaml
@@ -10,6 +10,7 @@ dimensions: # for yellow porter ref https://trucks.cardekho.com/en/trucks/piaggi
   payload           : 750 # kgs
   tyre_radius       : 0.3
   tyre_section_width :  0.145
+  gear_ratio         : 26.67
 
 speed:
   max_forward_speed      : 3  # m/s
