--- a/vehicle_safety/params/vehicle_safety_params.yaml
+++ b/vehicle_safety/params/vehicle_safety_params.yaml
@@ -2,7 +2,9 @@ vehicle_safety:
   CTE_THR : 8 # cte threshold in meters
   HEAD_THR : 10 # Heading Threshold in degrees(+/-)
   GPS_FIX_THR : 10.0 #GPS FIX Threshold time in seconds
-  WHITE_LIST : ["GPS","TrackingController","Emergency","GeoFence"] # vehicle will stop,if these errors came up
+  PX4_RESTART_SEC : 120 # Pixhawk restart delay to restart px4 if mavros behaves badly.[It only works if mavros GPS data is bad. It won't start mavros launch file]
+  HEADING_TIME_THR : 10.0 # Heading Time threshold in seconds, if beyond this time, vehicle will stop
+  WHITE_LIST : ["GPS","TrackingController","Emergency","GeoFence"] # "mavros" # vehicle will stop,if these errors came up
   BLACK_LIST : ["Heading"] # vehcile will ignore and continue running, if the errors coming from these items.
   use_geo_fence : True
   geo_fence_coordinates: [
