--- a/obstacle_stop_planner/params/obstacle_stop_planner.yaml
+++ b/obstacle_stop_planner/params/obstacle_stop_planner.yaml
@@ -7,7 +7,7 @@ obstacle_stop_planner:
   robot_min_speed_th : 0.8
 
   traj_in  : "global_gps_trajectory"
-  scan_in  : "laser_scan"
+  # scan_in  : "laser_scan"
   traj_out : "local_gps_trajectory"
   speed_min_threshold : 0.5 # speed less than this would not move vehicle.
   vis_collision_points : true
