--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 astropy
-dotmap==1.3.30
-numpy==1.22.3
-rospy-message-converter==0.5.2
-geojson==2.5.0
-scikit-learn==1.0.2
+dotmap>=1.3.30
+numpy>=1.22.3
+rospy-message-converter>=0.5.2
+geojson>=2.5.0
+scikit-learn>=1.0.2
