--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -14,7 +14,7 @@ patrol:
   google_map_center_always : true
   max_forward_speed : 1.0
   min_forward_speed : 0.8
-  max_backward_speed : -1.2
+  max_backward_speed : -1.0 # you can give positive/negative value. Both have same effect.
   min_backward_speed : -0.3
 
 pure_pursuit:
