--- a/sensor_drivers/zed-ros-wrapper/zed_wrapper/params/zed2i.yaml
+++ b/sensor_drivers/zed-ros-wrapper/zed_wrapper/params/zed2i.yaml
@@ -10,14 +10,14 @@ depth:
     max_depth:                  20.0            # Max: 40.0
 
 pos_tracking:
-    imu_fusion:                 true            # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
+    imu_fusion:                 false            # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
 
 sensors:
     sensors_timestamp_sync:     false           # Synchronize Sensors messages timestamp with latest received frame
     publish_imu_tf:             true            # publish `IMU -> <cam_name>_left_camera_frame` TF
 
 object_detection:
-    od_enabled:                 false           # True to enable Object Detection [only ZED 2]
+    od_enabled:                 true           # True to enable Object Detection [only ZED 2]
     model:                      0               # '0': MULTI_CLASS_BOX - '1': MULTI_CLASS_BOX_ACCURATE - '2': HUMAN_BODY_FAST - '3': HUMAN_BODY_ACCURATE
     confidence_threshold:       50              # Minimum value of the detection confidence of an object [0,100]
     max_range:                  15.             # Maximum detection range
