--- a/vehicle_safety_cpp/package.xml
+++ b/vehicle_safety_cpp/package.xml
@@ -8,7 +8,7 @@
   <!-- Example:  -->
   <maintainer email="vishnuk@bosonmotors.com">Vishnu K</maintainer>
   <maintainer email="gowthamk@bosonmotors.com">Gowtham</maintainer>
-  <maintainer email="jaisreeboson@bosonmotors.com">Jai Sree</maintainer>
+  <maintainer email="kjaisree@bosonmotors.com">Jai Sree</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
@@ -61,6 +61,12 @@
   <!-- <build_depend>autopilot_msgs</build_depend> -->
   <build_depend>autopilot_msgs</build_depend>
   <exec_depend>autopilot_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend> 
+  <exec_depend>message_runtime</exec_depend> 
+  <build_export_depend>message_generation</build_export_depend>
+  <build_export_depend>message_runtime</build_export_depend>
+
+
   <build_depend>pilot_msgs</build_depend>
   <exec_depend>pilot_msgs</exec_depend>
   <build_depend>pilot</build_depend>
@@ -68,6 +74,7 @@
   <!-- <build_export_depend>autopilot_msgs</build_export_depend> -->
   <build_depend>roslib</build_depend>
   <exec_depend>roslib</exec_depend>
+  <exec_depend>python3-shapely</exec_depend>
 
 
   <!-- <exec_depend>autopilot_msgs</exec_depend> -->
