--- a/autopilot/package.xml
+++ b/autopilot/package.xml
@@ -67,6 +67,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>python3-fastkml</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
