--- a/autopilot/params/patrol_params.yaml
+++ b/autopilot/params/patrol_params.yaml
@@ -4,7 +4,9 @@ path_publisher:
   path_resolution : 0.1 # 10 cms
   steering_limits_to_slow_down : 10 # if steering angle is more than this value, its associated speed reduces.
   speed_reduce_factor : 0.8 # by this factor speed will decrease after steering_limits_to_slow_down
-
+  smooth_path : true  # to true this parameter for smooth the straight path 
+  curve_dist : 10 #min distance between the curve points will assume as straight path and linear interpolate
+  curve_angle : 0.09 #curve detects at angle 0.01 to 0.35 (tune increase it for too much curves)
 
 patrol:
   path_topic           : "odom_path"
