243 add support for ls lidar (#244)
* feat : added ls lidar sensor driver
- #243

* feat : added lslidar support on launch level
- #243

* fix : No such key: 'lslidar'
- #243

* fix : x-forward coordinate system in lslidar

* chore : discarding lslidar points recording

--- a/vehicle_common/params/half_cabin_config.yaml
+++ b/vehicle_common/params/half_cabin_config.yaml
@@ -48,6 +48,14 @@ base_link:   # center of the rear axle.
     roll: 0.0
     pitch: 0.0
     yaw: 0.0
+  
+  lslidar: # center of the rear axle to rslidar(3d lidar)
+    x: 2.8
+    y: 0.0
+    z: 0.2
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
 
   rplidar: # center of the rear axle to rplidar (2d lidar )
     x: 2.8
