feat : OSP to stop for obstacle infront of vehicle irresptive of glob… (#251)
* feat : OSP to stop for obstacle infront of vehicle irresptive of global save path.
- added circle approximation of vehicle footprint
- added support for only for V1
- Results are looking promising in simulation
- Enable and disble options ware kept parameter file

* chore : proper logs
- #250

* chore : fix to confusion on colliion_found variable

* feat : added offpath osp check for bboxes and zed camera.
- FIXED BUG IN Bbox method to find close point. hypot formula is wringly written
- proper logs
- added collsion Bbox publish from V2
- #250

* chore : radius to zed camera changed
- #250

--- a/obstacle_stop_planner/params/obstacle_stop_planner.yaml
+++ b/obstacle_stop_planner/params/obstacle_stop_planner.yaml
@@ -16,6 +16,11 @@ obstacle_stop_planner:
   vis_collision_points : true
   vis_trajectory_rviz  : true
 
+  robot_level_collision_check_enable : true # To enable vehicle level collision irrespective of save path.
+  footprint:
+    offset_to_width : 0.3 # offset to add to vehicle width for vehicle level collision checking (meters)
+    offset_to_forward_length : 1 # offset to add to vehicle length in forward direction(meters)
+
 gaussian_velocity_filter:
   sigma : 3
   kernal_size : 11 # should be odd number
