[FIX] 181 osp v2 to work on top (#182)
* chore : added box filter in Lidar obstacle detector
- #181
- kept constant values for now, need to be kept them in param file
- OSP to consider /obstacle_detector/jsk_bboxes not filtered_bboxes

* feat: Added rqt for cropbox
- to remove rooftop added rqt cropbox
- #181

* a- added support for obsp v1 and v2 on top
- tested in yp
- #181

* chore : obsv1 on top issue
- added param file for cloud to laser
- added arg for both lidar_obstacle detector config file and cloud_to_laser config file in obstacle_stop_planner.launch
- Bouding box target frame to map frame, previously hot coaded to rslidar frame.

* chore : added Bboxes in Rviz

* chore : fixes to pull request

* kept all zeros to crop box filter

* fix : revert default.json from master

* Delete default.json

* fix file

---------

Co-authored-by: iam-vishnu <vishnuk@bosonmotors.com>
Co-authored-by: jaisreeboson <kjaisree@bosonmotors.com>
Co-authored-by: Vishnu K <100843600+iam-vishnu@users.noreply.github.com>

--- a/lidar_obstacle_detector/cfg/obstacle_detector.cfg
+++ b/lidar_obstacle_detector/cfg/obstacle_detector.cfg
@@ -18,6 +18,14 @@ gen.add("roi_min_x",              double_t, 0, "Default: -30",    -30,  -100, 0)
 gen.add("roi_min_y",              double_t, 0, "Default: -30",    -30,  -100, 0)
 gen.add("roi_min_z",              double_t, 0, "Default: -2.5",   -2.5, -5,   0)
 
+gen.add("crop_box_max_x",         double_t, 0, "Default: 0.3",     0.3,   -5,   5)
+gen.add("crop_box_max_y",         double_t, 0, "Default: 1",     1,   -5,    5)
+gen.add("crop_box_max_z",         double_t, 0, "Default: 1",      1,    -5,   5)
+
+gen.add("crop_box_min_x",         double_t, 0, "Default: -1.5",    -1.5,  -5, 5)
+gen.add("crop_box_min_y",         double_t, 0, "Default: -1",    -1,  -5, 5)
+gen.add("crop_box_min_z",         double_t, 0, "Default: -1",   -1, -5,   5)
+
 gen.add("ground_threshold",       double_t, 0, "Default: 0.8",    0.4,  0.0,  1.0)
 
 gen.add("cluster_threshold",      double_t, 0, "Default: 0.6",    0.6,  0.0,  1.5)
