--- a/lidar_obstacle_detector/params/rs_lidar_config.yaml
+++ b/lidar_obstacle_detector/params/rs_lidar_config.yaml
@@ -10,6 +10,14 @@ roi_min_x: 0
 roi_min_y: -30
 roi_min_z: -2
 
+crop_box_max_x: 0
+crop_box_max_y: 0
+crop_box_max_z: 0
+
+crop_box_min_x: 0
+crop_box_min_y: 0
+crop_box_min_z: 0
+
 neighbors : 50
 standard_deviation : 1
 
