--- a/obstacle_stop_planner/params/obstacle_stop_planner.yaml
+++ b/obstacle_stop_planner/params/obstacle_stop_planner.yaml
@@ -1,12 +1,11 @@
 obstacle_stop_planner:
   stop_line_buffer : 5 # distance to be maintained from obstacle from front tip of vehicle (m).
+  slow_line_buffer : 2 # distance to be slow down to stop with the smooth stop before stop index 
   radial_off_set_to_vehicle_width : 0.3 # offset search radius to add vehicle width.
   trajectory_resolution : 0.5 # the minimum distance between the points in trajectory
   stop_threshold_time_for_obs : 5 # time to stop vehicle if obstacle is detected in front of vehicle (s).
-
+  velocity_speed_profile_enable : true
   lookup_collision_distance : 20 # the distance to look for obstacle from vehicle location on the path.
-  robot_min_speed_th : 0.8
-
   traj_in  : "global_gps_trajectory"
   use_zed_object_detection: True
   zed_object_topic : "/zed2i/zed_node/obj_det/objects"
