--- a/collision_monitor/params/collision_monitor_params.yaml
+++ b/collision_monitor/params/collision_monitor_params.yaml
@@ -1,9 +1,9 @@
 collision_monitor:
-  base_frame_id: "base_link"
-  source_timeout: 5.0
-  frequency: 15
-  min_points: 5
-  points: [4.0, 1, -1, 1, -1, -1, 4.0, -1]
+  base_frame_id: "base_link" # Robot base frame.
+  source_timeout: 5.0 # before time out
+  frequency: 15 # frequency of the collision monitor node.
+  min_points: 5 # Minimum points inside the polygon to not consider as collision.
+  points: [4.0, 1, -1, 1, -1, -1, 4.0, -1] # should be even in number, order is x1,y1,x2,y2 and so on.
 
 
   observation_sources: [ "lidar_scan", "zed_scan"]
@@ -13,11 +13,11 @@ collision_monitor:
 
   zed_scan:
     type: "scan"
-    topic: "zed_laser_scan"
+    topic: "/slamware_ros_sdk_server_node/scan"
 
   pointcloud:
     type: "pointcloud"
-    topic: "/zed2i/zed_node/point_cloud/cloud_registered1"
+    topic: "/rslidar_points"
     min_height: 0.1
     max_height: 0.5
 
