289 autonav centerline collision checking (#290)
* feat : first commit on autonav

1> added a launch file for autonav
2> basic package structure is kept.

* chore : added obstacle detector param file

* #126

* chore : added function names for bboxes_utils.py and added vector2d.py
- #126

* chore : left side, right side bonding boxes are publising into topics,
 # 126

* chore : basic row following is working on simulation
 # 126

* chore : incresed min_z on lidar preprocessing

* some times the bouding boxes are not comming properly, to remove it i have removed the all the ground points

* #126

* chore : added new param file to support upmounted lidar

* chore : added mission file from halfcabin

* basic working code

* working code on staright lines

* obseravtions file

* commit from the vehicle

* chore: basic centering is working.

* chore : added obstacle stop planner

 - #126

* chore : added obstacle stop planner launch file

- # 126

* fix : moving avarage filter but fix

* chore : added avg filter parameters

* chore: removed auto_nav.hpp

* chore: changes lidar tf

* feat: added linear regresion on inliers,
- #126

* chore : removed autopilot params
- # 126

* chore : removed pilot and mavros from auto_nav launch file
- #126

* added rviz

* chore : turning fix
- #126

* chore : added moving avg filter on map lines
- #126

* fix : removed rslidar points from lauch file.
- #126

* chore : added

* chore : modifited urdf and point cloud to laser_scan convetion

- #126

* feat : added curvature based turn detection
- #126

* chore : added bag file launch file
- #126

* chore : modified pcl params
- #126

* chore : global path reference laser points filtered

- #126

* chore : allow_reverse to False by default
- #126

* chore: removed path on the back side of vehicle

- #126

* fix: vehicle going revese #126

* fix : added cross product based perpendicular di

--- a/auto_nav/params/autonav_params.yaml
+++ b/auto_nav/params/autonav_params.yaml
@@ -1,4 +1,6 @@
 auto_nav:
+  scan_topic : "laser_scan"
+  local_cloud_scan : "local_cloud_laser_scan"
   farm_details:
     row_spacing : 8 # distance between the tree rows in meters
   regulate_speed_enable : True # enable regulated speed
@@ -24,4 +26,6 @@ auto_nav:
   moving_avarage_filter:
     enable : True
     window_size : 10 # How many previous lines to average.
+
+  use_previous_line : True # To use best ransac line which is collision free, Vehicle might not go in exact center after keepin, But maintains to go between the tree.
 
