--- a/auto_nav/params/cloud_map_params.yaml
+++ b/auto_nav/params/cloud_map_params.yaml
@@ -3,10 +3,34 @@ global_frame : "map"
 local_frame : "base_link"
 enable_global_cloud_map : false
 global_cloud_map_topic : "global_cloud_map"
-enable_local_cloud_map : true
+enable_local_cloud_map : true 
 local_cloud_map_topic : "local_cloud_map"
-voxel_size : 0.5
-local_map_size_x : 30
-local_map_size_y : 15
-min_height_local_frame : 1
-max_height_local_frame : 10
+enable_tree_mapping : true
+tree_mapping_topic : "tree_cloud_map"
+voxel_size : 0.5 # voxel size of 
+local_map_size_x : 30 # left and right side 
+local_map_size_y : 30 # forward and backward 
+min_height_local_frame : 1 # min height wrt local_frame
+max_height_local_frame : 3 # max height wrt local_frame
+
+# Crop box parameters wrt sensor frame. 
+crop_box_max_x: 0.5
+crop_box_max_y: 1
+crop_box_max_z: 3
+
+crop_box_min_x: -3
+crop_box_min_y: -1
+crop_box_min_z: -3
+
+# Tree clustering parameters
+cluster_threshold: 0.7
+cluster_max_size: 150
+cluster_min_size: 5
+
+# Bouding box by its Area
+min_area : 4 
+
+# Tree map related parameters
+row_width : 5
+row_lenght : 5
+tree_height : 3
