--- a/pointcloud_to_laserscan_launcher/CMakeLists.txt
+++ b/pointcloud_to_laserscan_launcher/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(collision_monitor)
+project(pointcloud_to_laserscan_launcher)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -7,18 +7,7 @@ project(collision_monitor)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  jsk_recognition_msgs
-  laser_geometry
-  nav_msgs
-  pcl_ros
-  roscpp
-  rospy
-  sensor_msgs
-  tf2
-  tf2_ros
-)
+find_package(catkin REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -77,7 +66,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs#   jsk_recognition_msgs#   nav_msgs#   sensor_msgs
+#   std_msgs  # Or other packages containing msgs
 # )
 
 ################################################
@@ -111,8 +100,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES collision_monitor
-#  CATKIN_DEPENDS geometry_msgs jsk_recognition_msgs laser_geometry nav_msgs pcl_ros roscpp rospy sensor_msgs tf2 tf2_ros zed_interfaces
+#  LIBRARIES pointcloud_to_lasercan_launcher
+#  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
 
@@ -123,13 +112,13 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-include
-  ${catkin_INCLUDE_DIRS}
+# include
+# ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/collision_monitor.cpp
+#   src/${PROJECT_NAME}/pointcloud_to_lasercan_launcher.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -140,7 +129,7 @@ include
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/collision_monitor_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/pointcloud_to_lasercan_launcher_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -204,7 +193,7 @@ include
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_collision_monitor.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_pointcloud_to_lasercan_launcher.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
