--- a/pointcloud_to_laserscan_launcher/package.xml
+++ b/pointcloud_to_laserscan_launcher/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>collision_monitor</name>
+  <name>pointcloud_to_laserscan_launcher</name>
   <version>0.0.0</version>
-  <description>The collision_monitor package</description>
+  <description>The pointcloud_to_laserscan_launcher package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/collision_monitor</url> -->
+  <!-- <url type="website">http://wiki.ros.org/pointcloud_to_lasercan_launcher</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,36 +49,6 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>jsk_recognition_msgs</build_depend>
-  <build_depend>laser_geometry</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf2</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>jsk_recognition_msgs</build_export_depend>
-  <build_export_depend>laser_geometry</build_export_depend>
-  <build_export_depend>nav_msgs</build_export_depend>
-  <build_export_depend>pcl_ros</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>tf2</build_export_depend>
-  <build_export_depend>tf2_ros</build_export_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>jsk_recognition_msgs</exec_depend>
-  <exec_depend>laser_geometry</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
-  <exec_depend>pcl_ros</exec_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>tf2</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
