--- a/auto_nav/package.xml
+++ b/auto_nav/package.xml
@@ -58,6 +58,7 @@
 <build_depend>lidar_obstacle_detector</build_depend>
 <build_depend>costmap_2d</build_depend>
 <build_depend>autopilot_msgs</build_depend>
+<build_depend>autopilot_utils</build_depend>
 <build_depend>laser_geometry</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
@@ -69,6 +70,7 @@
   <build_export_depend>lidar_obstacle_detector</build_export_depend>
   <build_export_depend>costmap_2d</build_export_depend>
   <build_export_depend>autopilot_msgs</build_export_depend>
+  <build_export_depend>autopilot_utils</build_export_depend>
   <build_export_depend>laser_geometry</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
@@ -80,7 +82,8 @@
   <exec_depend>lidar_obstacle_detector</exec_depend>  
   <exec_depend>costmap_2d</exec_depend>  
   <exec_depend>autopilot_msgs</exec_depend>  
-  <exec_depend>laser_geometry</exec_depend>  
+  <exec_depend>laser_geometry</exec_depend> 
+    <exec_depend>autopilot_utils</exec_depend>   
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
