--- a/collision_monitor/params/collision_monitor_params.yaml
+++ b/collision_monitor/params/collision_monitor_params.yaml
@@ -3,8 +3,8 @@ collision_monitor:
   source_timeout: 5.0 # before time out
   frequency: 15 # frequency of the collision monitor node.
   min_points: 5 # Minimum points inside the polygon to not consider as collision.
-  points : [[-0.65, 1], [-0.65, -1],[3.35, -1], [3.35, 1]] # Foot_print points representing the vehicle wrt base_link
-
+  points : [[-0.8, 1], [-0.8, -1],[4.45, -1], [4.45, 1]] # Foot_print points representing the vehicle wrt base_link
+          #  [[-0.8, 1], [-0.8, -1],[4.45, -1], [4.45, 1]] # vehicle lenght 2.
 
   observation_sources: [ "rslidar_scan"] # ["zed_scan"]
   rslidar_scan:
